Fixed Before Header Notification Vertical Alignment

--- a/wp-content/themes/epik/assets/sass/layout/_before-header.scss
+++ b/wp-content/themes/epik/assets/sass/layout/_before-header.scss
@@ -69,7 +69,7 @@
 		font-size: rem(11);
 		font-weight: bold;
 		margin-bottom: 0;
-		margin-top: 6px;
+		margin-top: 10px;
 		text-transform: uppercase;
 
 		@include media($xlarge-screen-up) {
